// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main babel-loader options 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": Array [
          /node_modules/,
        ],
        "test": /\\\\\\.jsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
            },
          },
        ],
      },
    ],
  },
  "plugins": Array [],
}
`;

exports[`main defaults 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": Array [
          /node_modules/,
        ],
        "test": /\\\\\\.jsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": undefined,
          },
        ],
      },
    ],
  },
  "plugins": Array [],
}
`;
